<resources>
    <string name="app_name">ThirdAssignment</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Student Details</string>
    <string name="title_dashboard">Add Student</string>
    <string name="title_notifications">About Us</string>
    <string name="full_name">Full Name</string>
    <string name="student_registration">Student Registration</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address</string>
    <string name="select_gender">Select Gender</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="delete">Delete</string>
    <string name="student_details">Student Details</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
</resources>
