<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="#92BEE0">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:src="@drawable/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/full_name"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imgView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:text="@string/age"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="3dp"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/imgView"
        app:layout_constraintTop_toBottomOf="@+id/tvAge" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="8dp"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/tvAddress"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_delete_24dp"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>